[package]
name = "aruco-rs"
version = "0.1.0"
edition = "2021"
authors = ["FUJINAKA Fumiya <uzuna.kf@gmail.com>"]
rust-version = "1.65"
readme = "README.md"
repository = "https://github.com/uzuna/gst-example-rs"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
imageproc = "0.23.0"
nalgebra = "0.32.3"
